{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 131,
  "lineage": "8b434b21-f558-3b8d-a67d-c2a04a70e9e8",
  "resources": [
    {
      "module": "module.ecs.module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:security-group/sg-03dc73b5924aab158",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03dc73b5924aab158",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30504,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30504
              }
            ],
            "name": "terraform-20240923082251781800000003",
            "name_prefix": "terraform-",
            "owner_id": "241875560804",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "main-sg"
            },
            "tags_all": {
              "Name": "main-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d9ae2eea7ff499d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.ecs.module.network.data.aws_vpc.main",
            "module.global_bootstrap.module.ecs.aws_ecs_cluster.new_cluster",
            "module.global_bootstrap.module.ecs.aws_iam_role.ecs_task_execution",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_cloudwatch_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_execution_policy",
            "module.global_bootstrap.module.network.aws_internet_gateway.main",
            "module.global_bootstrap.module.network.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.ecs.module.network",
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:internet-gateway/igw-0b713ce50eb936d1d",
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-04d9ae2eea7ff499d"
              }
            ],
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "main-igw"
                ]
              }
            ],
            "id": "igw-0b713ce50eb936d1d",
            "internet_gateway_id": "igw-0b713ce50eb936d1d",
            "owner_id": "241875560804",
            "tags": {
              "Name": "main-igw"
            }
          }
        }
      ]
    },
    {
      "module": "module.ecs.module.ecs.module.network",
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:vpc/vpc-04d9ae2eea7ff499d",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-03e9146313e24b907",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-4871452f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "todolist-vpc"
                ]
              }
            ],
            "id": "vpc-04d9ae2eea7ff499d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f4467249f6f2c4b4",
            "owner_id": "241875560804",
            "tags": {
              "Name": "todolist-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:internet-gateway/igw-0b713ce50eb936d1d",
            "id": "igw-0b713ce50eb936d1d",
            "owner_id": "241875560804",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-04d9ae2eea7ff499d"
          },
          "dependencies": [
            "module.global_bootstrap.module.network.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:vpc/vpc-04d9ae2eea7ff499d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b424dd3c6a4037e1",
            "default_route_table_id": "rtb-0f4467249f6f2c4b4",
            "default_security_group_id": "sg-00d547c9156982086",
            "dhcp_options_id": "dopt-4871452f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04d9ae2eea7ff499d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f4467249f6f2c4b4",
            "owner_id": "241875560804",
            "tags": {
              "Name": "todolist-vpc"
            },
            "tags_all": {
              "Name": "todolist-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:route-table/rtb-0f1cf265862e8dd81",
            "id": "rtb-0f1cf265862e8dd81",
            "owner_id": "241875560804",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b713ce50eb936d1d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "todolist-frontend-route-table"
            },
            "tags_all": {
              "Name": "todolist-frontend-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d9ae2eea7ff499d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.global_bootstrap.module.ecs.aws_ecs_cluster.new_cluster",
            "module.global_bootstrap.module.ecs.aws_iam_role.ecs_task_execution",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_cloudwatch_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_execution_policy",
            "module.global_bootstrap.module.network.aws_internet_gateway.main",
            "module.global_bootstrap.module.network.aws_vpc.new_vpc",
            "module.network.module.network.data.aws_internet_gateway.main",
            "module.network.module.network.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0255aa0feeeb71a7f",
            "route_table_id": "rtb-0f1cf265862e8dd81",
            "subnet_id": "subnet-0ed1a0711cc411cdb"
          },
          "dependencies": [
            "module.global_bootstrap.module.ecs.aws_ecs_cluster.new_cluster",
            "module.global_bootstrap.module.ecs.aws_iam_role.ecs_task_execution",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_cloudwatch_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_execution_policy",
            "module.global_bootstrap.module.network.aws_internet_gateway.main",
            "module.global_bootstrap.module.network.aws_vpc.new_vpc",
            "module.network.aws_route_table.main",
            "module.network.aws_subnet.main",
            "module.network.module.network.data.aws_internet_gateway.main",
            "module.network.module.network.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:subnet/subnet-0ed1a0711cc411cdb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed1a0711cc411cdb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241875560804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todolist-frontend-subnet"
            },
            "tags_all": {
              "Name": "todolist-frontend-subnet"
            },
            "vpc_id": "vpc-04d9ae2eea7ff499d"
          },
          "dependencies": [
            "module.global_bootstrap.module.ecs.aws_ecs_cluster.new_cluster",
            "module.global_bootstrap.module.ecs.aws_iam_role.ecs_task_execution",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_cloudwatch_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_execution_policy",
            "module.global_bootstrap.module.network.aws_internet_gateway.main",
            "module.global_bootstrap.module.network.aws_vpc.new_vpc",
            "module.network.module.network.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.network",
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:internet-gateway/igw-0b713ce50eb936d1d",
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-04d9ae2eea7ff499d"
              }
            ],
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "main-igw"
                ]
              }
            ],
            "id": "igw-0b713ce50eb936d1d",
            "internet_gateway_id": "igw-0b713ce50eb936d1d",
            "owner_id": "241875560804",
            "tags": {
              "Name": "main-igw"
            }
          }
        }
      ]
    },
    {
      "module": "module.network.module.network",
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:vpc/vpc-04d9ae2eea7ff499d",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-03e9146313e24b907",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-4871452f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "todolist-vpc"
                ]
              }
            ],
            "id": "vpc-04d9ae2eea7ff499d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f4467249f6f2c4b4",
            "owner_id": "241875560804",
            "tags": {
              "Name": "todolist-vpc"
            }
          }
        }
      ]
    }
  ]
}